# platformd-trustd

./: .gitignore  NEWS  README.md  meson.build
.github/workflows/: ci.yml
docs/: platform-trust.md
man/: meson.build  pam_platformd.xml  platformd-trustd.service.xml  trustctl.xml
pam/: platformd-gate.example
src/trust/: attest-stub.c  attest.c  attest.h  io.platformd.Trust.varlink  meson.build  pam_platformd.c  pe.c  pe.h  test-integration.sh  test-pe.c  test-smoke.sh  test-verify.c  trustctl.c  trustd.c  verify.c  verify.h
units/: 70-platformd-trustd.install  platformd-trustd.service.in
